WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148489
Fix WKMutableArray creations in WKUserMediaPermissionRequest
https://bugs.webkit.org/show_bug.cgi?id=148489
Summary
Fix WKMutableArray creations in WKUserMediaPermissionRequest
Zan Dobersek
Reported
2015-08-26 12:48:08 PDT
Fix WKMutableArray creations in WKUserMediaPermissionRequest
Attachments
Patch
(2.50 KB, patch)
2015-08-26 12:55 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2015-08-26 12:55:12 PDT
Amends the code landed in
r188385
.
http://trac.webkit.org/changeset/188385
Zan Dobersek
Comment 2
2015-08-26 12:55:31 PDT
Created
attachment 259971
[details]
Patch
Zan Dobersek
Comment 3
2015-08-27 00:59:58 PDT
Comment on
attachment 259971
[details]
Patch Clearing flags on attachment: 259971 Committed
r189015
: <
http://trac.webkit.org/changeset/189015
>
Zan Dobersek
Comment 4
2015-08-27 01:00:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug