Fix WKMutableArray creations in WKUserMediaPermissionRequest https://bugs.webkit.org/show_bug.cgi?id=148489

Reviewed by Carlos Garcia Campos.

Call WKMutableArrayCreate() to create the WKMutableArray objects.
WKMutableArrayRef type is a pointer, so calling 'WKMutableArrayRef()'
just sets a null value to the variable that is then returned and
queried for size in WebKitTestRunner's TestController, resulting
in a crash.

* UIProcess/API/C/WKUserMediaPermissionRequest.cpp:
(WKUserMediaPermissionRequestDeviceNamesVideo):
(WKUserMediaPermissionRequestDeviceNamesAudio):


Canonical link: https://commits.webkit.org/166613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189015 268f45cc-cd09-0410-ab3c-d52691b4dbfc